# wae

./: .gitignore  Cargo.toml  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: audit.yml  docs.yml  tests.yml
examples/: hyper_echo.rs  tcp_echo.rs
examples/shared/: hyper.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/future/future/: trait.Future.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/core/ops/drop/: trait.Drop.js
implementors/futures_core/stream/: trait.Stream.js
implementors/futures_io/if_std/: trait.AsyncRead.js  trait.AsyncWrite.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/tokio/io/async_read/: trait.AsyncRead.js
implementors/tokio/io/async_write/: trait.AsyncWrite.js
implementors/wae/net/: trait.ToSocketAddrs.js
macros/: Cargo.toml
macros/src/: lib.rs
src/: callback.rs  context.rs  error.rs  lib.rs  sync.rs  task.rs  threadpool.rs  util.rs
src/io/: cancel.rs  mod.rs
src/io/read/: ext.rs  mod.rs
src/io/shared/: event.rs  handle.rs  mod.rs  result.rs  state.rs
src/io/write/: ext.rs  mod.rs
src/net/: mod.rs  tcp.rs
src/net/sockaddr/: get_addr_info.rs  mod.rs  to_socket_addrs.rs
src/net/socket_addr/: get_addr_info.rs  to_socket_addrs.rs
src/net/tcp/: connect.rs  event.rs  listen.rs  listener.rs  mod.rs  read.rs  socket.rs  split.rs  stream.rs  write.rs
src/overlapped/: event.rs  io.rs  mod.rs  state.rs  wsa_event.rs
src/task/: block_in_place.rs  block_on.rs  mod.rs  spawn.rs  util.rs  waker.rs  yield_now.rs
src/wae/: context.rs.html  error.rs.html  lib.rs.html  sync.rs.html  threadpool.rs.html  util.rs.html
src/wae/io/: cancel.rs.html  mod.rs.html
src/wae/io/read/: ext.rs.html  mod.rs.html
src/wae/io/shared/: event.rs.html  handle.rs.html  mod.rs.html  result.rs.html  state.rs.html
src/wae/io/write/: ext.rs.html  mod.rs.html
src/wae/net/: mod.rs.html
src/wae/net/sockaddr/: get_addr_info.rs.html  mod.rs.html  to_socket_addrs.rs.html
src/wae/net/socket_addr/: get_addr_info.rs.html  mod.rs.html  to_socket_addrs.rs.html
src/wae/net/tcp/: connect.rs.html  listen.rs.html  listener.rs.html  mod.rs.html  read.rs.html  socket.rs.html  split.rs.html  stream.rs.html  write.rs.html
src/wae/overlapped/: event.rs.html  io.rs.html  mod.rs.html  state.rs.html
src/wae/task/: block_on.rs.html  mod.rs.html  spawn.rs.html  util.rs.html  waker.rs.html
tests/: basic.rs  channels.rs  futures.rs  http.rs  tcp.rs
wae/: all.html  attr.main.html  attr.test.html  fn.context.html  fn.spawn.html  index.html  sidebar-items.js
wae/context/: fn.current.html  struct.ContextGuard.html
wae/error/: enum.Error.html  index.html
wae/io/: index.html  sidebar-items.js  trait.AsyncReadExt.html  trait.AsyncWriteExt.html  trait.Cancelable.html
wae/io/cancel/: trait.Cancelable.html
wae/io/read/: index.html  sidebar-items.js  struct.Chain.html  struct.IoSliceMut.html  struct.Read.html  struct.ReadExact.html  trait.AsyncRead.html  trait.AsyncReadExt.html
wae/io/read/ext/: struct.Chain.html  struct.Read.html  struct.ReadExact.html  trait.AsyncReadExt.html
wae/io/write/: index.html  sidebar-items.js  struct.IoSlice.html  struct.Write.html  struct.WriteAll.html  trait.AsyncWrite.html  trait.AsyncWriteExt.html
wae/io/write/ext/: struct.Write.html  struct.WriteAll.html  trait.AsyncWriteExt.html
wae/net/: index.html  sidebar-items.js  struct.Incoming.html  struct.ReadHalf.html  struct.TcpListener.html  struct.TcpStream.html  struct.WriteHalf.html  trait.ToSocketAddrs.html
wae/net/sockaddr/to_socket_addrs/: trait.ToSocketAddrs.html
wae/net/tcp/: index.html  sidebar-items.js  struct.Accept.html  struct.Incoming.html  struct.ReadHalf.html  struct.TcpListener.html  struct.TcpStream.html  struct.WriteHalf.html
wae/net/tcp/listener/: struct.Accept.html  struct.Incoming.html  struct.TcpListener.html
wae/net/tcp/split/: struct.ReadHalf.html  struct.WriteHalf.html
wae/net/tcp/stream/: struct.TcpStream.html
wae/overlapped/: index.html
wae/task/: fn.block_on.html  fn.may_block.html  fn.spawn.html  fn.yield_now.html  index.html  sidebar-items.js  struct.JoinHandle.html
wae/task/block_on/: fn.block_on.html
wae/task/spawn/: fn.spawn.html  struct.JoinHandle.html
wae/task/util/: fn.may_block.html  fn.yield_now.html
wae/threadpool/: enum.Priority.html  index.html  sidebar-items.js  struct.Builder.html  struct.ContextGuard.html  struct.Handle.html  struct.Threadpool.html
