[package]
name = "wae"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
description = "An async executor based on the Win32 thread pool API"
readme = "README.md"
repository = "https://github.com/raftario/wae.git"
license = "Apache-2.0"
keywords = ["win32", "windows", "async", "executor", "threadpool"]
categories = ["asynchronous", "concurrency"]
include = [".github/"]

[workspace]
members = ["macros"]

[dependencies]
async-task-ffi = "4.1.1"
waker-fn = "1.1.0"
pin-utils = "0.1.0"
pin-project-lite = "0.2.4"
parking = "2.0.0"
[dependencies.wae-macros]
path = "macros"
optional = true
[dependencies.winapi]
version = "0.3.9"
features = [
    "std",
    "threadpoolapiset",
    "errhandlingapi",
    "sysinfoapi",
    "winnt",
    "winbase",
    "minwindef",
    "impl-default",
]
[dependencies.futures-io]
version = "0.3.12"
optional = true
[dependencies.tokio]
version = "1.1.0"
optional = true
[dependencies.socket2]
version = "0.3.19"
optional = true
[dependencies.tracing]
version = "0.1.22"
features = ["std"]
default-features = false
optional = true
[dependencies.parking_lot]
version = "0.11.1"
optional = true

[features]
default = []
net = [
    "winapi/winsock2",
    "winapi/ws2tcpip",
    "winapi/ws2def",
    "winapi/ws2ipdef",
    "winapi/inaddr",
    "winapi/in6addr",
    "winapi/synchapi",
    "winapi/minwinbase",
    "futures-io",
    "socket2",
]
macros = ["wae-macros"]

[dev-dependencies]
futures = "0.3.12"
hyper = { version = "0.14.2", features = ["client", "server", "http1"] }
[dev-dependencies.wae-macros]
path = "macros"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
features = ["macros"]

[[test]]
name = "channels"
path = "tests/channels.rs"
required-features = ["macros"]
[[test]]
name = "tcp"
path = "tests/tcp.rs"
required-features = ["net", "macros"]
[[test]]
name = "http"
path = "tests/http.rs"
required-features = ["net", "macros", "tokio"]
