[package]
name = "wae"
version = "0.1.0"
authors = ["Raphaël Thériault <self@raftar.io>"]
edition = "2018"
description = "An async executor based on the Win32 thread pool API"
readme = "README.md"
repository = "https://github.com/raftario/wae.git"
license = "Apache-2.0"
keywords = ["win32", "windows", "async", "executor", "threadpool"]
categories = ["asynchronous", "concurrency"]
include = [".github/"]

[workspace]
members = ["macros"]

[dependencies]
async-task = "4"
crossbeam-queue = "0.3"
pin-utils = "0.1"
pin-project-lite = "0.2"
[dependencies.wae-macros]
path = "macros"
optional = true
[dependencies.winapi]
version = "0.3.9"
features = [
    "std",
    "threadpoolapiset",
    "synchapi",
    "sysinfoapi",
    "winnt",
    "winbase",
    "minwindef",
    "impl-default",
]
[dependencies.futures-core]
version = "0.3"
optional = true
[dependencies.futures-io]
version = "0.3"
optional = true
[dependencies.tokio]
version = "1"
optional = true
[dependencies.socket2]
version = "0.3"
optional = true
[dependencies.tracing]
version = "0.1"
features = ["std"]
default-features = false
optional = true
[dependencies.parking_lot]
version = "0.11"
optional = true

[features]
default = []
net = [
    "winapi/winsock2",
    "winapi/ws2tcpip",
    "winapi/ws2def",
    "winapi/ws2ipdef",
    "winapi/mswsock",
    "winapi/inaddr",
    "winapi/in6addr",
    "winapi/ioapiset",
    "winapi/minwinbase",
    "winapi/winnt",
    "futures-core",
    "futures-io",
    "socket2",
]
macros = ["wae-macros"]
docs = ["net", "macros", "tokio"]

[dev-dependencies]
futures = "0.3.12"
[dev-dependencies.wae-macros]
path = "macros"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
features = ["docs"]

[[test]]
name = "tcp"
path = "tests/tcp.rs"
required-features = ["net", "macros"]
