[package]
name = "wae"
version = "0.1.0"
authors = ["Raphaël Thériault <self@raftar.io>"]
edition = "2018"
description = "An async executor based on the Win32 thread pool API"
readme = "README.md"
repository = "https://github.com/raftario/wae.git"
license = "Apache-2.0"
keywords = ["win32", "windows", "async", "executor", "threadpool"]
categories = ["asynchronous", "concurrency"]
exclude = [".github/"]

[workspace]
members = ["macros"]

[dependencies]
async-task = "4"
concurrent-queue = "1"
pin-utils = "0.1"
pin-project-lite = "0.2"

# macros
wae-macros = { path = "macros", optional = true }
# io-shared
atomic-waker = { version = "1", optional = true }
cache-padded = { version = "1", optional = true }
# io-futures
futures-io = { version = "0.3", optional = true }
# io-tokio
tokio = { version = "1", optional = true }
# net
socket2 = { version = "0.3", optional = true }
# stream
futures-core = { version = "0.3", optional = true }
# tracing
tracing = { version = "0.1", features = ["std"], default-features = false, optional = true }

[dependencies.winapi]
version = "0.3.9"
features = [
    "std",
    "threadpoolapiset",
    "synchapi",
    "sysinfoapi",
    "winnt",
    "winbase",
    "minwindef",
    "impl-default",
]

[features]
default = []
macros = ["wae-macros"]
io = ["winapi/ws2def", "winapi/minwinbase"]
io-ext = []
io-shared = ["winapi/minwinbase", "atomic-waker", "cache-padded"]
io-compat = []
io-futures = ["io-compat", "futures-io"]
io-tokio = ["io-compat", "tokio"]
net = [
    "io",
    "io-shared",
    "winapi/winsock2",
    "winapi/ws2tcpip",
    "winapi/ws2ipdef",
    "winapi/mswsock",
    "winapi/inaddr",
    "winapi/in6addr",
    "winapi/ioapiset",
    "futures-core",
    "socket2",
]
stream = ["futures-core"]
docs = ["macros", "io-ext", "io-tokio", "io-futures", "net", "stream"]

[dev-dependencies]
futures = "0.3.12"
hyper = { version = "0.14.4", features = ["client", "server", "http1", "http2"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
features = ["docs"]

[[test]]
name = "tcp"
path = "tests/tcp.rs"
required-features = ["macros", "io-ext", "net"]
